# schlaues_kind

./: .gitignore  Cargo.toml
Listen/: Alle_irregulären_Verben.txt  Kurze_knifflige_Wörter.txt
locales/: schlaues_kind.yml
src/: controller.rs  data.rs  main.rs  ui.rs
src/assets/lists/: Knifflige_Wörter.txt  Lange_knifflige_Wörter.txt
src/backlog/: Sounds.md
src/data/: math_basics.rs  verbs.rs  word_list.rs
src/sounds/: mod.rs
src/ui/: action.rs  the_app.rs  viz.rs
src/ui/assets/: mod.rs
src/ui/modals/: about.rs  button.rs  math_basic_operation.rs  mod.rs  tricky_word.rs  verb_declination.rs
