[package]
name = "schlaues_kind"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
eframe = "0.33"
egui = "0.33"
egui_extras = { version = "0.33", features = ["file", "image"] }
image = { version = "0.25", features = ["png"] }
log = "0.4"
rand = "0.10"
rust-i18n = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.28"
strum_macros = "0.28"
